--- a/Procedurals.csproj
+++ b/Procedurals.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\ChessBoardMaker.cs" />
     <Compile Include="Assets\Scripts\CubeMaker.cs" />
+    <Compile Include="Assets\Scripts\LandscapeMaker.cs" />
     <Compile Include="Assets\Scripts\MeshBuilder.cs" />
     <Compile Include="Assets\Scripts\PlaneMaker.cs" />
     <Compile Include="Assets\Scripts\PyramidMaker.cs" />
